[package]
name = "openlibrary"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
flate2 = "1"
indicatif = "0.17"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
reqwest = { version = "0.12", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
