[package]
name = "openlibrary"
version = "0.2.1"
edition = "2024"
repository = "https://github.com/shelfwise/openlibrary"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
flate2 = "1"
indicatif = "0.17"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
# rustls with bundled webpki roots: TLS works without a system CA store or
# OpenSSL, so the binary runs on bare containers and cross-compiles cleanly.
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
